--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 :root {
-    --image-path: url("https://images.pexels.com/photos/2976176/pexels-photo-2976176.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    --image-path: url("");
 
 }
 
