--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Header from "../components/Header/Header.astro"
+import Footer from "../components/Footer.astro"
+
 export interface Props {
     title: string
 }
@@ -17,7 +20,9 @@ const { title } = Astro.props
         <title>{title}</title>
     </head>
     <body>
+        <Header />
         <slot />
+        <Footer />
     </body>
 </html>
 <style is:global>
@@ -43,8 +48,18 @@ const { title } = Astro.props
     html {
         background-color: #20203f;
     }
+    body {
+        position: relative;
+        min-height: 100vh;
+    }
     code {
         font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+    }
+
+    .custom-container {
+        margin: auto;
+        padding: 1.5rem;
+        max-width: 100ch;
     }
 </style>
