--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,17 +49,16 @@ const { title } = Astro.props
         background-color: #20203f;
     }
     body {
-        position: relative;
         min-height: 100vh;
     }
+
     code {
         font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
     }
 
     .custom-container {
-        margin: auto;
-        padding: 1.5rem;
-        max-width: 100ch;
+        @apply m-auto p-[1.5rem] max-w-[100ch]
     }
+</style>
 </style>
