--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro"
 
 <Layout title="Welcome to Astro.">
     <main class="custom-container">
-        <h1 class="text-white">Welcome to</h1>
+        <h1 class="text-white">Recent posts</h1>
         <ul role="list" class="link-card-grid">
             <Card
                 href="https://astro.build/chat/"
