--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
 </footer>
 <style>
     footer {
-        background-color: #171723;
+        background-color: rgba(0, 0, 0, 0.3);
         position: absolute;
         left: 0;
         bottom: 0;
