--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,20 @@ const { title } = Astro.props
     :root {
     }
     html {
-        background-color: #20203f;
+        /* Lawrencium */
+        background: theme("colors.purple.dark"); /* fallback for old browsers */
+        background: -webkit-linear-gradient(
+            to right,
+            theme("colors.purple.dark"),
+            theme("colors.purple.dark") 45% 55%,
+            theme("colors.purple.dark")
+        ); /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(
+            to right,
+            theme("colors.purple.dark"),
+            theme("colors.purple.light") 45% 55%,
+            theme("colors.purple.dark")
+        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
     body {
         min-height: 100vh;
@@ -57,8 +70,7 @@ const { title } = Astro.props
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
     }
 
-    .custom-container {
-        @apply m-auto p-[1.5rem] max-w-[100ch]
+    .content-container {
+        @apply m-auto p-[1.5rem] max-w-[100ch];
     }
-</style>
 </style>
