--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from "../components/Card.astro"
 ---
 
 <Layout title="Welcome to Astro.">
-    <main class="custom-container">
+    <main class="content-container">
         <h1 class="text-white">Recent posts</h1>
         <ul role="list" class="link-card-grid">
             <Card
