drastically changed direction, trying for a retro-futuristic vibe

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer>
-    <div class="custom-container py-3 text-white text-center">
+    <div class="ccontainer py-3 text-white text-center">
         Copyright© Debbio Industries
     </div>
 </footer>
