--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,14 @@ import Card from "../components/Card.astro"
 ---
 
 <Layout title="Welcome to Astro.">
-    <main class="content-container">
+    <main class="ccontainer">
         <h1 class="text-white">Recent posts</h1>
-        <ul role="list" class="link-card-grid">
+        <ul role="list" class="link-card-grid flex gap-6">
+            <Card
+                href="https://astro.build/chat/"
+                title="Community"
+                body="Come say hi to our amazing Discord community. ❤️"
+            />
             <Card
                 href="https://astro.build/chat/"
                 title="Community"
