--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,20 +47,19 @@ const { title } = Astro.props
     }
     html {
         /* Lawrencium */
-        background: theme("colors.purple.dark"); /* fallback for old browsers */
+        background: theme("colors.gray.medium"); /* fallback for old browsers */
         background: -webkit-linear-gradient(
             to right,
-            theme("colors.purple.dark"),
-            theme("colors.purple.dark") 45% 55%,
-            theme("colors.purple.dark")
+            theme("colors.gray.medium"),
+            theme("colors.gray.light") 45% 55%,
+            theme("colors.gray.medium")
         ); /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(
             to right,
 
-            #2d2928,
-            #403a3a 45% 55%,
-
-            #2d2928
+            theme("colors.gray.medium"),
+            theme("colors.gray.light") 45% 55%,
+            theme("colors.gray.medium")
         ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
     body {
