--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -2,15 +2,19 @@
 import Avatar from "./Avatar.astro"
 ---
 
-<header class="text-white p-6">
+<header class="text-offwhite p-6">
     <div class="flex gap-4 sm:flex-col-reverse justify-between items-center">
         <section id="info-lucca">
             <a href="#" class="name-anchor">
-                <h2 class="font-display sm:text-center text-glow-sm-white">
-                    <span class="firstName">Lucca</span><span> Del Debbio</span>
+                <h2 class="font-display sm:text-center">
+                    <span class="firstName">Lucca</span><span class="lastName">
+                        Del Debbio</span
+                    >
                 </h2>
             </a>
-            <p class="font-body text-sm opacity-80 sm:text-center">
+            <p
+                class="font-body text-sm opacity-80 sm:text-center text-offwhite"
+            >
                 <i>Developer, Maker and self-identified Crazy Scientist</i>
             </p>
         </section>
@@ -22,7 +26,7 @@ import Avatar from "./Avatar.astro"
                     <li><a href="#">Blog</a></li>
                 </ul>
             </nav>
-            <Avatar size={80} src="/avatar.jpg" />
+            <Avatar size={80} src="/avatar2.jpg" />
             <nav class="half-nav">
                 <ul>
                     <li><a href="#">Projects</a></li>
@@ -52,6 +56,10 @@ import Avatar from "./Avatar.astro"
         @apply text-blue-accent text-glow-sm-blue-accent decoration-blue-accent;
     }
 
+    h2 .lastName {
+        @apply text-glow-sm-white text-white;
+    }
+
     /* This is the same as the content-container,
        but I left it as a separate class in case I want to
        use different widths for the header and the rest of the content */
@@ -62,7 +70,7 @@ import Avatar from "./Avatar.astro"
     }
 
     .full-nav ul {
-        @apply sm:hidden flex justify-evenly border-t-2 border-b-2 py-2 mt-4;
+        @apply sm:hidden flex justify-evenly border-offwhite border-t-2 border-b-2 py-2 mt-4;
     }
 
     .half-nav {
@@ -70,6 +78,6 @@ import Avatar from "./Avatar.astro"
     }
 
     .half-nav ul {
-        @apply hidden sm:flex sm:justify-evenly sm:items-center h-3/4 border-t-2 border-b-2;
+        @apply hidden sm:flex sm:justify-evenly sm:items-center h-3/4 border-offwhite border-t-2 border-b-2;
     }
 </style>
