added most of the Card variables. Need to improve mobile version

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -22,8 +22,8 @@ import Avatar from "./Avatar.astro"
         <div class="sm:w-full sm:grid sm:grid-cols-[1fr_190px_1fr]">
             <nav class="half-nav">
                 <ul>
+                    <li><a href="#">Archive</a></li>
                     <li><a href="#">Games</a></li>
-                    <li><a href="#">Blog</a></li>
                 </ul>
             </nav>
             <Avatar size={80} src="/avatar2.jpg" />
@@ -37,8 +37,8 @@ import Avatar from "./Avatar.astro"
     </div>
     <nav class="full-nav">
         <ul>
+            <li><a href="#">Archive</a></li>
             <li><a href="#">Games</a></li>
-            <li><a href="#">Blog</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">About</a></li>
         </ul>
