--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ allPosts = allPosts.slice(0, 4)
 <Layout title="Welcome to Astro.">
     <main class="ccontainer">
         <h1 class="text-offwhite">Recent posts</h1>
-
+        <p>teste</p>
         <ul role="list" class="link-card-grid text-white">
             {
                 allPosts.map((post) => (
