--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,31 +1,24 @@
 ---
+import Hero from "../components/Hero.astro"
 import Layout from "../layouts/Layout.astro"
-import Card from "../components/Card.astro"
-let allPosts = await Astro.glob("../pages/posts/*.md")
-allPosts = allPosts.slice(0, 4)
 ---
 
-<Layout title="Welcome to Astro.">
-    <main class="ccontainer">
-        <h1 class="text-offwhite">Recent posts</h1>
-        <ul role="list" class="link-card-grid text-white">
-            {
-                allPosts.map((post) => (
-                    <Card
-                        href={post.url}
-                        id={post.frontmatter.id}
-                        image={post.frontmatter.image}
-                        title={post.frontmatter.title}
-                        author={post.frontmatter.author}
-                        publishedDate={post.frontmatter.pubDate.slice(0, 10)}
-                        body={post.frontmatter.description}
-                        tags={post.frontmatter.tags}
-                        relatedUrls={post.frontmatter.relatedUrls}
-                    />
-                ))
-            }
-        </ul>
-    </main>
+<Layout title="Lucca Del Debbio">
+    <div class="relative h-screen">
+        <h1
+            class="text-white font-bold text-3xl sm:text-6xl font-mono text-center pt-28"
+        >
+            UNDER MAINTENANCE
+        </h1>
+        <p class="text-offwhite text-lg sm:text-xl text-center">
+            Soon to be a site by:
+        </p>
+        <div
+            class="absolute left-0 top-0 h-screen w-screen flex flex-col justify-center"
+        >
+            <Hero />
+        </div>
+    </div>
 </Layout>
 
 <style></style>
