--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,8 @@
 <footer>
-    <div class="ccontainer py-3 text-white text-center">
-        Copyright© Debbio Industries
+    <div
+        class="ccontainer h-12 text-white flex flex-col justify-center items-center"
+    >
+        <p>Copyright© Debbio Industries</p>
     </div>
 </footer>
 <style>
