--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,8 +20,10 @@ const { title } = Astro.props
         <title>{title}</title>
     </head>
     <body>
-        <Header />
-        <slot />
+        <div class="pb-12">
+            <Header />
+            <slot />
+        </div>
         <Footer />
     </body>
 </html>
@@ -73,6 +75,7 @@ const { title } = Astro.props
     body {
         min-height: 100vh;
         font-family: "Quicksand";
+        position: relative;
     }
 
     code {
