--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -5,7 +5,7 @@ import Avatar from "./Avatar.astro"
 <header class="text-offwhite p-6">
     <div class="flex gap-4 sm:flex-col-reverse justify-between items-center">
         <section id="info-lucca">
-            <a href="#" class="name-anchor">
+            <a href="/dev" class="name-anchor">
                 <h2 class="font-display sm:text-center">
                     <span class="firstName">Lucca</span><span class="lastName">
                         Del Debbio</span
@@ -22,8 +22,8 @@ import Avatar from "./Avatar.astro"
         <div class="sm:w-full sm:grid sm:grid-cols-[1fr_190px_1fr]">
             <nav class="half-nav">
                 <ul>
+                    <li><a href="/dev">Home</a></li>
                     <li><a href="#">Archive</a></li>
-                    <li><a href="#">Games</a></li>
                 </ul>
             </nav>
             <Avatar size={80} src="/avatar2.jpg" />
@@ -37,8 +37,8 @@ import Avatar from "./Avatar.astro"
     </div>
     <nav class="full-nav">
         <ul>
+            <li><a href="/dev">Home</a></li>
             <li><a href="#">Archive</a></li>
-            <li><a href="#">Games</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">About</a></li>
         </ul>
