--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -7,7 +7,7 @@ const heroPost = allPosts[0]
 allPosts = allPosts.slice(1, 4)
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Home">
     <main class="ccontainer">
         <section id="latest-post">
             <h2 class="text-offwhite">Latest post</h2>
