--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -23,7 +23,7 @@ import Avatar from "./Avatar.astro"
             <nav class="half-nav">
                 <ul>
                     <li><a href="/dev">Home</a></li>
-                    <li><a href="#">Archive</a></li>
+                    <li><a href="/archive">Archive</a></li>
                 </ul>
             </nav>
             <Avatar size={80} src="/avatar2.jpg" />
