--- a/src/components/TagList/TagList.astro
+++ b/src/components/TagList/TagList.astro
@@ -1,44 +1,60 @@
 ---
 import { getCollection } from "astro:content"
-// const tags = await getCollection("tags")
+
 const allPosts = await getCollection("blog")
 const tags = Object.entries(
     allPosts
-        .map((post) => {
-            return post.data.tags
-        })
+        .map((post) => post.data.tags)
         .flat()
         .sort()
         .reduce((acc: any, tag) => {
-            if (acc[tag]) acc[tag] += 1
-            else acc[tag] = 1
+            if (acc[tag.slug]) acc[tag.slug] += 1
+            else acc[tag.slug] = 1
             return acc
         }, {})
 )
 ---
 
-<div class="flex w-full gap-2">
-    <div class="left-arrow"></div>
-    <ul class="flex-grow flex gap-2 overflow-x-auto p-10 -m-10">
-        {
-            tags.map(([label, count]) => (
-                <li>
-                    <a href={"tags/" + label} class="flex">
-                        <p class="bg-blue-desaturated text-blue-accent border-r-2 border-offwhite text-glow-sm-blue-accent min-w-[2.5ch] text-center">
-                            {count}
-                        </p>
-                        <p class="bg-gray-faded">{label}</p>
-                    </a>
-                </li>
-            ))
-        }
-    </ul>
-    <div class="right-arrow"></div>
+<div class="flex max-w-full gap-2">
+    <div class="left-arrow flex-shrink-0"></div>
+    <div class="flex-grow overflow-x-auto cscrollbar">
+        <ul class="w-full flex gap-2">
+            {
+                tags.map(([label, count]) => (
+                    <li>
+                        <a href={"tags/" + label} class="flex">
+                            <p class="bg-blue-desaturated text-blue-accent border-r-2 border-offwhite text-glow-sm-blue-accent min-w-[2.5ch] text-center">
+                                {count}
+                            </p>
+                            <p class="bg-gray-faded">{label}</p>
+                        </a>
+                    </li>
+                ))
+            }
+        </ul>
+    </div>
+    <div class="right-arrow flex-shrink-0"></div>
 </div>
 
 <style>
     p {
-        @apply text-offwhite font-nasa p-1 uppercase;
+        @apply text-offwhite font-nasa p-1 uppercase whitespace-nowrap;
+    }
+
+    .cscrollbar::-webkit-scrollbar-track {
+        @apply pt-2;
+    }
+
+    .cscrollbar::-webkit-scrollbar {
+        @apply pt-2;
+        height: 8px;
+        background-color: theme(colors.gray.medium);
+    }
+
+    .cscrollbar::-webkit-scrollbar-thumb {
+        @apply pt-2;
+        border-radius: 4px;
+        background-color: rgba(217, 200, 169, 0.75);
     }
 
     .left-arrow {
