--- a/src/pages/archive/index.astro
+++ b/src/pages/archive/index.astro
@@ -25,4 +25,8 @@ const allPosts = await getCollection("blog")
     .link-card-grid {
         @apply grid grid-cols-1 sm:grid-cols-2 gap-8;
     }
+
+    .clip {
+        @apply w-10 h-10 absolute bg-black;
+    }
 </style>
